apt (0.8.16~exp13) UNRELEASED; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/dpkgpm.cc:
    - chroot if needed before dpkg --assert-multi-arch
    - ensure that dpkg binary doesn't have the chroot-directory prefixed
    - call dpkg --assert-multi-arch with execvp instead of execv
  * apt-pkg/depcache.cc:
    - if a M-A:same package is marked for reinstall, mark all it's installed
      silbings for reinstallation as well (LP: #859188)
  * apt-pkg/contrib/configuration.cc:
    - do not stop parent transversal in FindDir if the value is empty
  * methods/http{s,}.cc:
    - if a file without an extension is requested send an 'Accept: text/*'
      header to avoid that the server chooses unsupported compressed files
      in a content-negotation attempt (Closes: #657560)
  * apt-pkg/aptconfiguration.cc:
    - chroot if needed before calling dpkg --print-foreign-architectures
    - ensure that architectures are not added multiple times
  * cmdline/apt-mark.cc:
    - detect if dpkg has multiarch support before calling --set-selections
    - correctly ignore already (un)hold packages

  [ Steve Langasek ]
  * cmdline/apt-get.cc:
    - for cross-build-dependencies M-A: none should be DEB_HOST_ARCH,
      not DEB_BUILD_ARCH (Closes: #646288)

  [ Colin Watson ]
  * apt-pkg/algorithms.cc:
    - don't break out of the main-resolver loop for Breaks to deal with all
      of them in a single iteration (Closes: #657695, LP: #922485)
    - use a signed int instead of short for score calculation as upgrades
      become so big now that it can overflow (Closes: #657732, LP: #917173)
  * Fix IndexCopy::CopyPackages and TranslationsCopy::CopyTranslations to
    handle compressed files again (LP: #924182, closes: #658096)

  [ Michael Vogt ]
  * apt-pkg/deb/dpkgpm.cc:
    - fix crash when a package is in removed but residual config state
      (LP: #923807)
  * apt-pkg/contrib/fileutl.h:
    - fix compat with FileFd::OpenDescriptor() in ReadOnlyGzip mode
